cmake_minimum_required(VERSION 3.9)
project(deformable_conv)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_TYPE Release)
#set(CMAKE_CXX_FLAGS -D_GLIBCXX_USE_CXX11_ABI=0)
#set(CMAKE_CUDA_FLAGS "--expt-relaxed-constexpr")

#set(TF_INCLUDE_PATH /Users/sunjiahe/miniconda3/envs/tf2.0/lib/python3.6/site-packages/tensorflow_core/include)
#set(TF_INCLUDE_PATH /home/admin-seu/miniconda3/envs/py36/lib/python3.6/site-packages/tensorflow_core/include)
set(TF_INCLUDE_PATH /home/admin-seu/miniconda3/envs/tf1.14/lib/python3.6/site-packages/tensorflow/include)
#set(TF_INCLUDE_PATH /opt/conda/lib/python3.6/site-packages/tensorflow/include/)

#add_definitions(-D__JETBRAINS_IDE__)
add_definitions(-DEIGEN_USE_THREADS)
option(USE_CUDA OFF)
set(USE_CUDA ON)

if (USE_CUDA)
    add_definitions(-DGOOGLE_CUDA=1)
	add_definitions(-DEIGEN_USE_GPU)
#    set(CMAKE_CUDA_COMPILER /usr/local/cuda/bin/nvcc)
	find_package(CUDA REQUIRED)
#FILE(GLOB CUDA_LIBRARIESS /home/admin-seu/miniconda3/envs/tf1.14/lib/libcu*.so*)
#	set(CUDA_LIBRARIES ${CUDA_LIBRARIESS})
#   set(CUDA_INCLUDE_DIRS /home/admin-seu/miniconda3/envs/tf1.14/include/)
#	FILE(GLOB CUDA_LIBRARIES /usr/local/cuda/lib64/*.so*)
#	set(CUDA_INCLUDE_DIRS /usr/local/cuda/include/)
#    find_package(CUDA REQUIRED)
	enable_language(CUDA)
	set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
	set(CMAKE_CUDA_FLAGS "--expt-relaxed-constexpr")
endif ()
#add_library(ops SHARED deform_conv_cuda_kernel.h deform_conv_cuda_kernel.cu deform_conv_cuda.cpp)
#add_library(ops SHARED deformable_conv2d.h deformable_conv2d_utils.h test.cpp)
add_library(ops SHARED deformable_conv2d.cpp deformable_conv.cu  deformable_conv2d.h deformable_conv2d_utils.h)
target_include_directories(ops PUBLIC ${CUDA_INCLUDE_DIRS} ${TF_INCLUDE_PATH})
message(STATUS ${TF_INCLUDE_PATH})
#target_link_libraries(ops PRIVATE /Users/sunjiahe/miniconda3/envs/tf2.0/lib/python3.6/site-packages/tensorflow_core/libtensorflow_framework.dylib)
#target_link_libraries(ops PUBLIC ${CUDA_LIBRARIES} /home/admin-seu/miniconda3/envs/py36/lib/python3.6/site-packages/tensorflow_core/libtensorflow_framework.so.2)
#target_link_libraries(ops PUBLIC ${CUDA_LIBRARIES} /opt/conda/lib/python3.6/site-packages/tensorflow/libtensorflow_framework.so.1)
target_link_libraries(ops PUBLIC ${CUDA_LIBRARIES} /home/admin-seu/miniconda3/envs/tf1.14/lib/python3.6/site-packages/tensorflow/libtensorflow_framework.so.1)
target_compile_definitions(ops PRIVATE -D_GLIBCXX_USE_CXX11_ABI=0)
#target_compile_features(ops PRIVATE -D_GLIBCXX_USE_CXX11_ABI=0)
